test/compile_errors/err_body_missing_colon_brace.w
//! expect-check-fail: expected ':' or '{'

fn main:
    var x = 0
    while x < 10
        x = x + 1
